# sliceguard

./: .gitignore  .readthedocs.yaml  README.md  ROADMAP.md  example_data.json  pyproject.toml  requirements.txt
docs/: requirements.txt
docs/source/: conf.py  index.rst  modules.rst  sliceguard.rst
examples/: .gitignore  audio_issues_commonvoice_whisper.ipynb  audio_issues_condition_monitoring_dcase.ipynb  hf_dataset_loading.ipynb  hf_spaces.py  quickstart_mixed_data.ipynb  quickstart_structured_data.ipynb  quickstart_unstructured_data.ipynb  sliceguard_for_automl.ipynb  stable_diffusion_data_viewer.ipynb  stable_diffusion_evaluation.ipynb  strengths_and_weaknesses_of_stable_diffusion.ipynb  unstructured_data_cleaning.ipynb
legacy/: .gitignore  README.md  find_critical_segments.ipynb  generate_predictions.ipynb  requirements.txt
segment_guard/: __init__.py  detection.py  embedder.py  embedding_utils.py  segment_guard.py  utils.py
slice_guard/: __init__.py
sliceguard/: __init__.py  data.py  detection.py  embedding_utils.py  embeddings.py  explanation.py  modeling.py  report.py  sliceguard.py  utils.py
sliceguard/models/: huggingface.py
tests/: .gitignore  test_huggingface.py  test_modeling.py  test_modelling.py  test_segment_guard.py  test_slice_guard.py  test_sliceguard.py  test_sliceguard_cv.py  test_topic_modelling.py
