[project]
name = "sliceguard"
version = "0.0.6"
authors = [
  { name="Renumics GmbH", email="info@renumics.com"},
  { name="Daniel Klitzke", email="daniel.klitzke@renumics.com"}
]
description = "A library for detecting critical data slices in structured and unstructured data based on features, metadata and model predictions."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
  "hnne >= 0.1.8",
  "numpy>=1.17.2",
  "pandas >= 2.0.0",
  "fairlearn >= 0.8.0",
  "scikit-learn >= 1.2.2",
  "umap-learn >= 0.5.3",
  "transformers >= 4.30.2",
  "torch >= 2.0.1",
  "torchaudio >= 2.0.2",
  "sentence-transformers >= 2.2.1",
  "tqdm >= 4.65.0",
  "Pillow >= 9.5.0",
  "renumics-spotlight >= 1.3.0rc3",
  "pydantic < 2.0.0",
  "plotly >= 5.15.0",
]

[project.urls]
"Homepage" = "https://github.com/Renumics/sliceguard"
"Bug Tracker" = "https://github.com/Renumics/sliceguard/issues"

[tool.setuptools]
packages = ["sliceguard"]