[project]
name = "sliceguard"
version = "0.0.27"
authors = [
  { name="Renumics GmbH", email="info@renumics.com"},
  { name="Daniel Klitzke", email="daniel.klitzke@renumics.com"}
]
description = "A library for detecting critical data slices in structured and unstructured data based on features, metadata and model predictions."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
  "hnne >= 0.1.10",
  "numpy>=1.17.2",
  "pandas >= 2.0.0",
  "fairlearn >= 0.8.0",
  "scikit-learn >= 1.2.2",
  "umap-learn >= 0.5.3",
  "tqdm >= 4.65.0",
  "renumics-spotlight >= 1.3.0",
  "datasets >= 2.13.1",
]

[project.optional-dependencies]
automl = [
  "flaml >= 2.0.0",
  "xgboost >= 1.7.6, < 2.0.0",
]
embedding = [
  "transformers >= 4.30.2",
  "sentence-transformers >= 2.2.1",
  "torch >= 2.0.1",
  "torchaudio >= 2.0.2",  
  "datasets[audio,vision] >= 2.13.1",
]
all = [
  "flaml >= 2.0.0",
  "xgboost >= 1.7.6, < 2.0.0",
  "transformers >= 4.30.2",
  "sentence-transformers >= 2.2.1",
  "torch >= 2.0.1",
  "torchaudio >= 2.0.2",
  "datasets[audio,vision]>= 2.13.1",
]
docs = [
    "sphinxcontrib-applehelp >= 1.0.7",
    "sphinxcontrib-devhelp >= 1.0.5",
    "sphinxcontrib-htmlhelp >= 2.0.4",
    "sphinxcontrib-jsmath >= 1.0.1",
    "sphinxcontrib-qthelp >= 1.0.6",
    "sphinxcontrib-serializinghtml >= 1.1.9",
    "myst-parser >= 2.0.0",
]

[project.urls]
"Homepage" = "https://github.com/Renumics/sliceguard"
"Bug Tracker" = "https://github.com/Renumics/sliceguard/issues"

[tool.setuptools]
packages = ["sliceguard"]
